kubernetes/base/test.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 1
  selector:
    matchLabels:
      component: test
      gcp-sql-proxy: enabled
  template:
    metadata:
      labels:
        component: test
        foo: bar
         gcp-sql-proxy: enabled
    spec:
      containers:
      - name: test
        image: node:14
        command: [ "/bin/sh", "-c", "--" ]
        args: [ "while true; do sleep 30; done;" ]
