kubernetes/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mutating-webhook-service
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    component: mutating-webhook-server
