kubernetes/base/admission.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
webhooks:
  - name: mutating-webhook-service.default.svc.cluster.local
    objectSelector:
      matchLabels:
        gcp-sql-proxy: enabled
    failurePolicy: Fail
    clientConfig:
      service:
        name: mutating-webhook-service
        namespace: default
        path: "/mutate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdEekNDQS9lZ0F3SUJBZ0lVU0NxSGltaDRBbHpoWGtwMjlKQUV6YmFXeW1nd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2daWXhDekFKQmdOVkJBWVRBa1JGTVE4d0RRWURWUVFJREFaQ1pYSnNhVzR4RURBT0JnTlZCQWNNQjBKbApjbXhwYmlBeEVEQU9CZ05WQkFvTUIwRWdVMjFwZEdneEREQUtCZ05WQkFzTUExQkpRakVXTUJRR0ExVUVBd3dOCktpNWtaV1poZFd4MExuTjJZekVzTUNvR0NTcUdTSWIzRFFFSkFSWWRjMjFwZEdoaGFrQmhhbk5wZEM1dmJtMWoKYVhKdmMyOW1kQzVqYjIwd0hoY05NakV3T1RFek1UVXpPRFExV2hjTk1qUXdOekF6TVRVek9EUTFXakNCbGpFTApNQWtHQTFVRUJ [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
