kubernetes/base/kust.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    od.io/overlay: base
    od.io/provisioner: kustomize
  name: mutating-webhook-service
  namespace: default
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    component: mutating-webhook-server
    od.io/overlay: base
    od.io/provisioner: kustomize
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    od.io/overlay: base
    od.io/provisioner: kustomize
  name: mutating-webhook-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mutating-webhook-server
      od.io/overlay: base
      od.io/provisioner: kustomize
  template:
    metadata:
      labels:
        component: mutating-webhook-server
        od.io/overlay: base
        od.io/provisioner: kustomize
    spec:
      containers:
      - image: smithaj/sidecar:1.04
        imagePullPolicy: Never
        name: mutating-webhook-server
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    od.io/overlay: base
    od.io/provisioner: kustomize
  name: mutating-webhook
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdEekNDQS9lZ0F3SUJBZ0lVU0NxSGltaDRBbHpoWGtwMjlKQUV6YmFXeW1nd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2daWXhDekFKQmdOVkJBWVRBa1JGTVE4d0RRWURWUVFJREFaQ1pYSnNhVzR4RURBT0JnTlZCQWNNQjBKbApjbXhwYmlBeEVEQU9CZ05WQkFvTUIwRWdVMjFwZEdneEREQUtCZ05WQkFzTUExQkpRakVXTUJRR0ExVUVBd3dOCktpNWtaV1poZFd4MExuTjJZekVzTUNvR0NTcUdTSWIzRFFFSkFSWWRjMjFwZEdoaGFrQmhhbk5wZEM1dmJtMWoKYVhKdmMyOW1kQzVqYjIwd0hoY05NakV3T1RFek1UVXpPRFExV2hjTk1qUXdOekF6TVRVek9EUTFXakNCbGpFTApNQWtHQTFVRUJoTU [...]
    service:
      name: mutating-webhook-service
      namespace: default
      path: /mutate
  failurePolicy: Fail
  name: mutating-webhook-service.default.svc.cluster.local
  objectSelector:
    matchLabels:
      foo: bar
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
